--- a/src/components/Card.module.css
+++ b/src/components/Card.module.css
@@ -70,6 +70,11 @@
         color: black;
         cursor: pointer;
     }
+
+    button:focus {
+        outline: 2px solid rgb(255, 77, 0);
+        outline-offset: 2px;
+    }
 }
 
 @media (max-width: 384px) {
